<?xml version="1.0"?>
<package format="2">
  <name>hero_chassis_controller</name>
  <version>0.0.0</version>
  <description>The hero_chassis_controller package</description>
  <maintainer email="1369867815@qq.com">ch</maintainer>
  <license>BSD</license>
  <author email="1369867815@qq.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>forward_command_controller</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>control_toolbox</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>rm_description</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/hero_chassis_controller_plugins.xml"/>
  </export>
</package>
